--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+body {
+  background-color: #33C7FF;
+}
+
+#navBar {
+  background-color: #3380FF;
+  width: 700px;
+  height: 225px;
+  position: absolute;
+  padding: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 400px;
+  border: 5px solid lightblue;
+
+}
+
 .tile {
     border: 1px solid black;
     width: 100px;
@@ -6,32 +24,72 @@
     display: inline-block;
     text-align: center;
     float: left;
+    background-color: white;
 }
 
 .selectedTile {
   background-color: gray;
 }
 
+#time {
+  border-radius: 50%;
+  border: 2px solid black;
+  width: 40px;
+  text-align: center;
+  padding: 10px;
+}
+
+#startButton {
+  width: 80px;
+  height: 40px;
+}
+
 #tileContainer {
     background-color: lightblue;
-    width: 310px;
-    margin-top: 20px;
+    width: 307px;
+    margin: 20px;
+    padding: 5px;
     display: inline-block;
 }
 
 #wordContainer {
-  width: 310px;
-  height: 100px;
+  width: 300px;
+  height: 130px;
   border: 3px black solid;
+}
+
+#clickedWord{
+  width: 160px;
+  height: 60px;
+  display: inline-block;
+  text-align: center;
+  font-size: 20px;
   vertical-align: top;
+  padding-top: 30px;
+}
+
+#countdownTimer {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  display: inline-block;
+  font-size: 20px;
+  border-left: 3px solid black;
+  text-align: center;
+  margin-left: 35px;
+  padding-left: 10px;
+  vertical-align: top;
+  padding-top: 30px;
 }
 
 #submitContainer {
-  width: 315px;
+  width: 307px;
+  height: 305px;
   vertical-align: top;
   margin: 20px;
   display: inline-block;
   background-color: lightblue;
+  padding: 5px;
 }
 
 #enterButton {
@@ -43,29 +101,71 @@
 }
 
 #playerOneBoard {
-  width: 150px;
-  vertical-align: top;
+  width: 49%;
+  height: 270px;
   display: inline-block;
   background-color: #336EFF;
+}
+
+#playerOneScore {
+  background-color: #338DFF;
+  vertical-align: top;
+}
+
+#playerOneWords{
+  background-color: #33E6FF;
+  height: 100px;
+  margin: 10px;
 }
 
 #playerTwoBoard {
-  width: 150px;
-  vertical-align: top;
+  width: 49%;
+  height: 270px;
   display: inline-block;
   background-color: #336EFF;
 }
 
+#playerTwoScore {
+  background-color: #338DFF;
+  vertical-align: top;
+}
+
+#playerTwoWords {
+  background-color: #33E6FF;
+  height: 100px;
+  margin: 10px;
+}
+
+.addedWordClass {
+  background-color: white;
+  width: 140px;
+  margin-left: 10px;
+  margin-top: 5px;
+  vertical-align: top;
+  display: inline-block;
+  float: left;
+}
+
+.addedWordP {
+  color: green;
+  font-weight: bold;
+  position: relative;
+  left: 50%;
+}
+
 #playerBoard {
-  width: 350px;
-  height: 300px;
-  margin-top: 20px;
+  width: 410px;
+  height: 305px;
   background-color: lightblue;
   vertical-align: top;
   display: inline-block;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 5px;
 }
 
 #gameContainer {
   width: 1200px;
   background-color: #33A2FF;
+  margin: 20px;
 }
