--- a/css/style.css
+++ b/css/style.css
@@ -18,25 +18,19 @@ body {
 
 .tile {
     border: 1px solid black;
-    width: 100px;
-    height: 100px;
+    width: 97px;
+    height: 67px;
     vertical-align: top;
-    display: inline-block;
     text-align: center;
-    float: left;
+    display: inline-block;
     background-color: white;
+    margin-bottom: 3px;
+    padding-top: 30px;
+    font-size: 20px;
 }
 
 .selectedTile {
   background-color: gray;
-}
-
-#time {
-  border-radius: 50%;
-  border: 2px solid black;
-  width: 40px;
-  text-align: center;
-  padding: 10px;
 }
 
 #startButton {
