--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ body {
   background-color: gray;
 }
 
+.redTile {
+  background-color: red;
+}
+
 #startButton {
   width: 80px;
   height: 40px;
