--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ img {
   background-color: #336EFF;
 }
 
-#playerOneScore {
+#playerOneScoreSection {
   width: 92%;
   background-color: #338DFF;
   vertical-align: top;
@@ -143,7 +143,7 @@ img {
   vertical-align: top;
 }
 
-#playerTwoScore {
+#playerTwoScoreSection {
   background-color: #338DFF;
   vertical-align: top;
   width: 92%;
