--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ img {
     background-color: white;
     margin-bottom: 3px;
     padding-top: 30px;
-    font-size: 20px;
+    font-size: 0px;
 }
 
 .selectedTile {
@@ -84,7 +84,6 @@ img {
 }
 
 #countdownTimer {
-  position: absolute;
   width: 60px;
   height: 60px;
   display: inline-block;
@@ -184,14 +183,17 @@ img {
 }
 
 #playerBoard {
-  width: 410px;
-  height: 305px;
+  width: 405px;
+  height: 306px;
   background-color: lightblue;
   vertical-align: top;
   display: inline-block;
   margin-top: 20px;
   margin-left: 20px;
-  padding: 5px;
+  padding-left: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border: 1px solid lightblue;
 }
 
 #gameContainer {
